# rosbag-utils

./: README.md  pyproject.toml  requirements.txt  setup.cfg
requirements/: requirements-build.txt  requirements-common.txt
src/rosbag_utils/: __init__.py  __main__.py  comparator.py
